# rust-virt-manager

./: .gitignore  Cargo.toml  README.md
src/: app.rs  config.rs  connection.rs  edit_state.rs  error.rs  main.rs  qemu_capabilities.rs  state.rs  uri.rs  xml_helpers.rs
src/backend/: mod.rs  worker.rs
src/console/: mod.rs  serial.rs  ssh_tunnel.rs  vnc.rs
src/devices/: channel.rs  console.rs  controller.rs  disk.rs  filesystem.rs  graphics.rs  hostdev.rs  input.rs  interface.rs  memballoon.rs  mod.rs  panic_dev.rs  redirdev.rs  rng.rs  serial.rs  smartcard.rs  sound.rs  tpm.rs  video.rs  vsock.rs  watchdog.rs
src/domain/: mod.rs
src/views/: add_hardware.rs  clone_vm.rs  conn_details.rs  create_network.rs  create_pool.rs  create_vm.rs  create_volume.rs  details.rs  device_editors.rs  manager.rs  mod.rs  snapshots.rs  vm_window.rs  volume_browser.rs
src/widgets/: sparkline.rs
