[package]
name = "rust-virt-manager"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-or-later"
description = "A fast, modern virt-manager replacement built in Rust with egui"

[dependencies]
virt = "0.4"
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
log = "0.4"
url = "2"

eframe = { version = "0.34", default-features = false, features = ["wgpu", "persistence", "x11", "wayland", "default_fonts"] }
egui = "0.34"
egui_extras = { version = "0.34", features = ["image", "syntect"] }

env_logger = "0.11"
confy = "0.6"
image = { version = "0.25", features = ["png"] }
crossbeam-channel = "0.5"
rand = "0.9"
rfd = "0.15"
vnc-rs = "0.5"
tokio = { version = "1", features = ["rt", "net", "time"] }
vt100 = "0.16"
